check for nullptr, tdf#104265

Crash not reproduced, but a nullptr is believed to be the cause as
ParaPortionList::SafeGetObject() may return nullptr if a stray EditPaM
was passed to ImpEditEngine::GetI18NScriptType()

At least this matches
http://cgit.freedesktop.org/libreoffice/core/tree/editeng/source/editeng/impedit2.cxx?h=libreoffice-5-2-4#n1756
given in
http://crashreport.libreoffice.org/stats/crash_details/725e8295-6dc0-4b0c-aff3-57c6c95930f2
and
http://crashreport.libreoffice.org/stats/crash_details/e2570ac8-6137-4b67-91b2-6cc871f8cb69

Change-Id: Id01983a31145442016da527a57024dc060060b1a
(cherry picked from commit 17236fe21f9b0c734c0e8d5c371b8112dcab8ac0)
Reviewed-on: https://gerrit.libreoffice.org/36989
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Michael Stahl <mstahl@redhat.com>
(cherry picked from commit 9982510049417ce4e3969a492cfdecd3e5ed0760)